fix for projects spacing

--- a/src/app.scss
+++ b/src/app.scss
@@ -70,15 +70,14 @@ NAVBAR
 *********************************************************************/
 .navbar {
   background: #000 !important;
-  height: 48px;
-  max-height: 48px;
-  font-size: 17px !important;
+  // height: 48px;
+  // max-height: 48px;
+  // font-size: 14px !important;
   line-height: 26px !important;
   transition-duration: 0.42s;
-  opacity: 0.8;
   a {
     color: $color;
-    font-size: 17px;
+    font-size: 14px;
   }
 }
 .navbar-scroll {
@@ -637,6 +636,10 @@ PROJECTS
     width: 100%;
     height: 100%;
   }
+   &-feature {
+    margin: 4px 0px;
+    background-color: #fff;
+   }
 }
 .projects-footer {
   padding: 34px 0px 21px 0px;
